--- a/visu-hex/templates/index.html
+++ b/visu-hex/templates/index.html
@@ -298,7 +298,7 @@
             connection: '#4a5a7a',
             pathConnection: '#64b5f6',
             text: '#e0e0e0',
-            ant: '#ff5722',
+            ant: '#000000',
             selected: '#ffeb3b'
         };
 
